# MASFactory

./: .gitignore  README.md  README.zh.md  pyproject.toml
applications/clawcanvas/: README.md  deploy_15051.sh  deploy_15081.sh  pyproject.toml
applications/clawcanvas/backend/clawcanvas_backend/: ai_authoring.py  app.py  compiler.py  runtime_bindings.py  schema.py  skill_packager.py  validation.py
applications/clawcanvas/frontend/: package-lock.json  package.json  vite.config.js
applications/clawcanvas/frontend/src/: App.vue  style.css
applications/clawcanvas/frontend/src/components/: BehaviorEditor.vue  CanvasBoard.vue  CustomEditorModal.vue  InspectorPanel.vue  LoopEditorModal.vue  LoopNodeInspector.vue  MapEditor.vue  ObjectListEditor.vue  StringListEditor.vue  ToolListEditor.vue
applications/clawcanvas/frontend/src/composables/: useClawCanvas.js  useI18n.js
applications/ddo/: .env.example  README.md  main.py  pyproject.toml
applications/ddo/configs/: config.yaml
applications/ddo/ddo/: consultation.py  main.py  paths.py
applications/ddo/ddo/graphs/: g_actions_generation_and_selection.py  g_confidence_estimation.py  g_consultation.py  g_response_simulation.py
applications/ddo/ddo/runtime/: app_runtime.py  bootstrap.py  config_types.py  dataset_context.py  openai_model_compat.py  openai_retry.py
applications/ddo/ddo/services/: api_btp.py  policy.py  policy_sampler.py  token_usage.py  utils_data.py
applications/ddo/ddo/state_model/: state.py
applications/ddo/docs/: design.md
masfactory-visualizer/: README.md  language-configuration-aml.json  (+1 more)
(+160 files in other folders)
